Fix KisToolLine to handle end and cancel requests

BUG:336959